--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node ./dist/interact",
+    "start": "node ./dist/index",
     "testRun": "npm run build && npm run start"
   },
   "author": "",
