--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chess",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.js",
+  "main": "./dist/exports.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
